Updated APK download link and renamed APK for better compatibility

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span></span>
             </button>
 
-            <a href="#download" class="cta-button">Download Now</a>
+            <a href="WalkEarn.apk" download class="cta-button">Download Now</a>
         </nav>
     </header>
 
@@ -59,11 +59,11 @@
     <section class="hero" id="home">
         <h1>Turn Your Steps Into <br><span>Real Rewards</span></h1>
         <p>Join millions of users who are getting fit and earning coins every day. Track your steps, challenge friends
-            in 1v1 duels, and redeem rewards.</p>
+            in 1v1 duels, refer friends to earn ₹1.00 each, and redeem rewards.</p>
         <div style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
-            <a href="#download" class="cta-button" id="download">
-                <span style="margin-right: 0.5rem;">📱</span>
-                Get on Google Play
+            <a href="WalkEarn.apk" download class="cta-button" id="download">
+                <span style="margin-right: 0.5rem;">📥</span>
+                Download WalkEarn APK
             </a>
         </div>
     </section>
@@ -96,17 +96,26 @@
             <p>Convert your hard-earned coins into real rewards, gift cards, or crypto. Instant payouts to your wallet!
             </p>
         </article>
+
+        <article class="feature-card">
+            <span class="icon" aria-hidden="true">👥</span>
+            <h3>Refer & Earn</h3>
+            <p>Invite friends and earn ₹1.00 for every friend who joins using your referral code! Share your code and
+                boost your earnings together.
+            </p>
+        </article>
     </section>
 
     <!-- How It Works Section -->
     <section id="how-it-works" class="how-it-works">
-        <h2>Start Earning in 3 Steps</h2>
+        <h2>Start Earning in 4 Steps</h2>
         <div class="steps-container">
             <article class="step-card">
                 <div class="step-number" aria-label="Step 1">1</div>
                 <div class="step-content">
                     <h3>Download & Sign Up</h3>
-                    <p>Get the app from the Play Store and sign in with Google to start syncing your steps instantly.
+                    <p>Get the WalkEarn APK directly from this website and sign in with Google to start syncing your
+                        steps instantly.
                         Quick and easy setup!</p>
                 </div>
             </article>
@@ -122,6 +131,15 @@
 
             <article class="step-card">
                 <div class="step-number" aria-label="Step 3">3</div>
+                <div class="step-content">
+                    <h3>Refer Friends & Earn</h3>
+                    <p>Share your unique referral code with friends and family. Earn ₹1.00 for every friend who joins
+                        and starts walking. The more you share, the more you earn!</p>
+                </div>
+            </article>
+
+            <article class="step-card">
+                <div class="step-number" aria-label="Step 4">4</div>
                 <div class="step-content">
                     <h3>Redeem Rewards</h3>
                     <p>Exchange your accumulated coins for real cash, gift cards, or crypto. Instant payouts with no
@@ -170,13 +188,13 @@
                     <h4>Product</h4>
                     <a href="#features">Features</a>
                     <a href="#how-it-works">How it Works</a>
-                    <a href="#download">Download</a>
+                    <a href="WalkEarn.apk" download>Download APK</a>
                 </div>
 
                 <div class="footer-column">
                     <h4>Legal</h4>
                     <a href="privacy.html">Privacy Policy</a>
-                    <a href="#">Terms of Service</a>
+                    <a href="terms.html">Terms of Service</a>
                     <a href="#">Cookie Policy</a>
                 </div>
 
