--- a/privacy.html
+++ b/privacy.html
@@ -21,6 +21,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="index.html#features">Features</a>
+                <a href="terms.html">Terms</a>
                 <a href="#" class="cta-button">Download App</a>
             </div>
         </nav>
