Update WalkEarn website and assets

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span></span>
             </button>
 
-            <a href="WalkEarn.apk" download class="cta-button">Download Now</a>
+            <a href="WalkEarn.apk" download class="cta-button" download="WalkEarn.apk">Download Now</a>
         </nav>
     </header>
 
@@ -61,7 +61,7 @@
         <p>Join millions of users who are getting fit and earning coins every day. Track your steps, challenge friends
             in 1v1 duels, refer friends to earn ₹1.00 each, and redeem rewards.</p>
         <div style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
-            <a href="WalkEarn.apk" download class="cta-button" id="download">
+            <a href="WalkEarn.apk" download class="cta-button" id="download" download="WalkEarn.apk">
                 <span style="margin-right: 0.5rem;">📥</span>
                 Download WalkEarn APK
             </a>
